--- a/components/Services/services.module.scss
+++ b/components/Services/services.module.scss
@@ -22,7 +22,7 @@
   .servicesDelivery {
     margin-block-end: 25px;
     background: #ffffff;
-    border: 1px solid rgba(71, 93, 135, 0.1);
+    // border: 1px solid rgba(71, 93, 135, 0.1);
     border-radius: 40px;
 
     &:nth-of-type(odd) {
@@ -41,6 +41,9 @@
       }
     }
     .servicesImg {
+      background-color: #F4F5F8;
+      padding: 40px 80px;
+      border-radius: 40px;
       img {
         height: 100%;
         width: 100%;
