--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -313,3 +313,26 @@ input:checked ~ h1 ~ div.pc {
 a {
   color: steelblue;
 }
+
+
+.zz{
+  p{
+    font-size: 24px;
+font-style: normal;
+font-weight: 600;
+color: #263238;
+line-height: 150%;
+  }
+}
+
+.zas{
+  h3{
+    text-align: center;
+font-family: Gilroy;
+font-size: 42px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+color: #263238;
+  }
+}
