--- a/components/Services/services.module.scss
+++ b/components/Services/services.module.scss
@@ -20,54 +20,74 @@
   }
 
   .servicesDelivery {
-    margin-block-end: 25px;
     background: #ffffff;
-    // border: 1px solid rgba(71, 93, 135, 0.1);
     border-radius: 40px;
-
+    margin-top: 60px;
+    @media (max-width: 900px) {
+     margin-top: 30px;
+    }
     &:nth-of-type(odd) {
       display: flex;
-
-      @media (max-width: 600px) {
+      gap: 60px;
+      justify-content: center;
+      align-items: center;
+      @media (max-width: 900px) {
         flex-direction: column;
+        gap: 20px;
       }
     }
     &:nth-of-type(even) {
       display: flex;
       flex-direction: row-reverse;
-
-      @media (max-width: 600px) {
+      justify-content: center;
+      gap: 60px;
+      align-items: center;
+      @media (max-width: 900px) {
         flex-direction: column;
+        gap: 20px;
       }
     }
     .servicesImg {
       background-color: #F4F5F8;
-      padding: 40px 80px;
+      max-width: 570px;
+      height: 400px;
+      padding: 50px 0;
+      width: 100%;
       border-radius: 40px;
-      img {
-        height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @media (max-width: 900px) {
         width: 100%;
+        max-width: unset;
       }
 
-      @media (max-width: 1090px) {
-        width: 500px;
+      @media (max-width: 500px) {
+        height: 300px;
+        img{
+          max-width: 250px;
+          height: 220px;
+        }
       }
+      // @media (max-width: 1090px) {
+      //   width: 500px;
+      // }
 
-      @media (max-width: 960px) {
-        width: 450px;
-      }
+      // @media (max-width: 960px) {
+      //   width: 450px;
+      // }
       
-      @media (max-width: 600px) {
-        width: 100%;
-        height: 200px;
-      }
+      // @media (max-width: 600px) {
+      //   width: 100%;
+      //   height: 200px;
+      // }
     }
     .servicesName {
-      display: flex;
-      flex-direction: column;
-      margin: auto;
       max-width: 390px;
-
+      @media (max-width: 900px) {
+        width: 100%;
+        max-width: unset;
+      }
       @media (max-width: 900px) {
         margin: auto 30px;
       }
@@ -77,7 +97,7 @@
       }
       
       @media (max-width: 480px) {
-        margin: 20px 30px 40px;
+        margin: 10px 10px 20px;
       }
 
       .inServicesName {
@@ -111,6 +131,7 @@
         line-height: 150%;
         color: #263238;
         margin: 20px 0;
+        padding-left: 20px;
         @media (max-width: 750px) {
           margin: 10px 0;
           line-height: 100%;
