--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -322,6 +322,9 @@ font-style: normal;
 font-weight: 600;
 color: #263238;
 line-height: 150%;
+@media (max-width:500px) {
+  font-size: 18px;
+}
   }
 }
 
@@ -334,5 +337,11 @@ font-style: normal;
 font-weight: 600;
 line-height: normal;
 color: #263238;
+margin: 80px 0px 60px 0;
+
+@media (max-width:500px) {
+  font-size: 20px;
+  margin: 40px 0px 10px 0;
+}
   }
 }
