--- a/components/Services/services.module.scss
+++ b/components/Services/services.module.scss
@@ -4,6 +4,11 @@
   @media (max-width: 750px) {
     font-size: 25px;
   }
+  @media (max-width: 500px) {
+    font-size: 20px;
+  margin: 40px 0px 30px 0;
+
+  }
 }
 
 .services {
@@ -29,7 +34,7 @@
     &:nth-of-type(odd) {
       display: flex;
       gap: 60px;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
       @media (max-width: 900px) {
         flex-direction: column;
@@ -39,7 +44,7 @@
     &:nth-of-type(even) {
       display: flex;
       flex-direction: row-reverse;
-      justify-content: center;
+      justify-content: space-between;
       gap: 60px;
       align-items: center;
       @media (max-width: 900px) {
@@ -61,7 +66,10 @@
         width: 100%;
         max-width: unset;
       }
-
+      img{
+        max-width: 300px;
+        height: 300px;
+      }
       @media (max-width: 500px) {
         height: 300px;
         img{
@@ -83,15 +91,12 @@
       // }
     }
     .servicesName {
-      max-width: 390px;
+      max-width: 465px;
       @media (max-width: 900px) {
         width: 100%;
         max-width: unset;
-      }
-      @media (max-width: 900px) {
         margin: auto 30px;
       }
-      
       @media (max-width: 600px) {
         margin: 20px auto 40px auto;
       }
@@ -121,7 +126,7 @@
         }
         
         @media (max-width: 380px) {
-          font-size: 22px;
+          font-size: 16px;
         }
       }
       .inServicesTitle {
@@ -132,16 +137,17 @@
         color: #263238;
         margin: 20px 0;
         padding-left: 20px;
+        max-width: 365px;
+        @media (max-width: 900px) {
+          width: 100%;
+          max-width: unset;
+
+        }
         @media (max-width: 750px) {
           margin: 10px 0;
-          line-height: 100%;
-        }
-        @media (max-width: 660px) {
-          font-size: 12px;
-          line-height: normal;
         }
         @media (max-width: 600px) {
-          font-size: 14px;
+          font-size: 16px;
         }
       }
       .inServicesP {
