--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,14 +26,85 @@ body {
 }
 
 @font-face {
-  font-family: "Gilroy";
-  src: url("/Gilroy/Gilroy-Regular.eot") format("eot"),
-    url("/Gilroy/Gilroy-Regular.woff") format("woff"),
-    url("/Gilroy/Gilroy-Regular.ttf") format("ttf");
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Bold.woff2') format('woff2'),
+  url('/fonts/Gilroy-Bold.woff') format('woff'),
+  url('/fonts/Gilroy-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Heavy.woff2') format('woff2'),
+  url('/fonts/Gilroy-Heavy.woff') format('woff'),
+  url('/fonts/Gilroy-Heavy.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Light.woff2') format('woff2'),
+  url('/fonts/Gilroy-Light.woff') format('woff'),
+  url('/fonts/Gilroy-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Extrabold.woff2') format('woff2'),
+  url('/fonts/Gilroy-Extrabold.woff') format('woff'),
+  url('/fonts/Gilroy-Extrabold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Semibold.woff2') format('woff2'),
+  url('/fonts/Gilroy-Semibold.woff') format('woff'),
+  url('/fonts/Gilroy-Semibold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Black.woff2') format('woff2'),
+  url('/fonts/Gilroy-Black.woff') format('woff'),
+  url('/fonts/Gilroy-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Regular.woff2') format('woff2'),
+  url('/fonts/Gilroy-Regular.woff') format('woff'),
+  url('/fonts/Gilroy-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Medium.woff2') format('woff2'),
+  url('/fonts/Gilroy-Medium.woff') format('woff'),
+  url('/fonts/Gilroy-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 
 .mySwiper {
   margin-bottom: 100px;
@@ -337,5 +408,28 @@ a {
       font-size: 20px;
       margin: 40px 0px 10px 0;
     }
+  }
+}
+
+.naviRouterCurrent a {
+  color: #b42126 !important;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 14px 28px;
+  background-color: #b42126;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  font-family: "Gilroy", sans-serif;
+  color: #fff;
+  border: 0;
+  border-radius: 48px;
+  transition: all .3s ease-in;
+  &:hover {
+    background-color: #921c20;
   }
 }
