--- a/components/ServicesNew/services.module.scss
+++ b/components/ServicesNew/services.module.scss
@@ -1,8 +1,19 @@
 .h1 {
   text-align: center;
+  font-size: 48px;
+  font-weight: 500;
   margin: 80px 0px 60px 0;
   @media (max-width: 750px) {
     font-size: 25px;
+    margin-bottom: 20px;
+  }
+}
+
+.subTitle {
+  font-size: 24px;
+  line-height: 1.5;
+  @media (max-width: 650px) {
+    font-size: 18px;
   }
 }
 
@@ -11,7 +22,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   margin-bottom: 300px;
-
+  margin-top: 80px;
   @media (max-width: 1250px) {
     margin-left: 20px;
     margin-right: 20px;
@@ -25,9 +36,11 @@
   }
   @media (max-width: 650px) {
     margin-bottom: 150px;
+    margin-top: 20px;
   }
   @media (max-width: 383px) {
     margin-bottom: 100px;
+
   }
 
   .servicesDelivery {
